# azure-upload-benchmark

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-please.yml
src/azure_upload_benchmark/: __init__.py  api.py  benchmark.py  cli.py  constants.py  plotting.py  reporting.py  results.py  upload.py  utils.py
tests/: test_api.py  test_cli.py  test_constants.py  test_reporting.py  test_results.py  test_utils.py
